# Simple2DRasterizer

./: .gitignore  Cargo.toml  Roadmap.md  build.rs  cubic_bezier_spline_example.json  sample_world.json  todo.md
images/: image.ppm
src/: bezier_curve.rs  bezier_curves.rs  draw.rs  line_segment.rs  main.rs  meaningless_bytes.rs  pixel_grid.rs  point_and_color.rs  possible_normal_termination.rs  serde_sdl_color.rs  splines.rs  user_interaction_helpers.rs  vec.rs  world.rs
