[package]
name = "simple-2d-rasterizer"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
itertools = "0.13.0"
rfd = "0.14.1" # TODO: This guy keeps putting things on standard err. Stop it! Or at least learn how.
sdl2 = { version = "0.36.0", features = ["bundled", "static-link"] }
serde = "1.0.202"
serde_json = "1.0.117"
typetag = "0.2.16"

[features]
default = ["leisurely-drawing"]
leisurely-drawing = []             # Draw things slooowly.
step-by-step-curves-and-lines = [] # Pause just a little after drawing each curve and line.
