[package]
name = "skean-splines-fun"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
atomic = { version = "0.6.0", default-features = false }
bytemuck = { version = "1.16.0", features = ["derive"] }
clap = { version = "4.5.4", features = ["derive"] }
itertools = "0.13.0"
rfd = "0.14.1" # TODO: This guy keeps putting things on standard err. Stop it! Or at least learn how.
sdl2 = { version = "0.36.0", features = [] }
serde = "1.0.202"
serde_json = "1.0.117"
typetag = "0.2.16"

[features]
default = ["bundled","leisurely-drawing"]
leisurely-drawing = []             # Draw things slooowly.
step-by-step-curves-and-lines = [] # Pause just a little after drawing each curve and line.
interactive-alerts-about-args = [] # Show graphical alerts for errors caused by arguments specified on the command line instead of just terminating.
bundled = ["sdl2/bundled"]
static-link = ["sdl2/static-link", "bundled"]
